[project]
name = "loading"
version = "1.0.0"
description = "Process data points"
authors = [
    {name = "UnixCodable",email = "lucasbordanave@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "matplotlib",
    "numpy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry]
# package-mode = false
